# vcv-plugin-cmake-example

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  RackSDK.cmake  plugin.json
.github/workflows/: build-plugin-linux-arm64.yml  build-plugin.yml
